--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -26,7 +26,7 @@
 
         <div class="mb-3">
         <lable for="image" class="form-label">Image Link</lable>
-        <input name="listing[image][url]" value="<%=listing.image.url %>" type="text" class="form-control" required>
+        <input name="listing[image]" value="<%=listing.image %>" type="text" class="form-control" required>
         <div class="invalid-feedback">Please enter a valid image Link/Url</div>
         </div>
 
