--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -26,6 +26,7 @@
     </div>
     </div>
 
+    <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
     <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
@@ -33,9 +34,12 @@
         <button class="btn btn-dark offset-5">Delete</button>
     </form>
     </div>
+    <% } %>
 
+ 
     <div class="col-8 offset-3 mb-3">
         <hr>
+        <% if(currUser){ %>
         <h4>Leave a Review</h4>
         <form  method="POST" action="/listings/<%= listing._id %>/reviews" novalidate class="needs-validation">
             <div class="mb-3 mt-3">
@@ -49,15 +53,15 @@
              </div>
              <button class="btn btn-outline-dark">Submit</button>
         </form>
+        <% } %>
+      
 
-        <hr/>
-
-        <p><b>All Review</b></p>
+        <p><b>All Reviews</b></p>
         <div class="row ">
         <% for(review of listing.reviews){ %>
         <div class="card col-5 mb-3 ms-3">
             <div class="card-body">
-                <div class="card-title">Jane doe</div>
+                <div class="card-title"><b>@<%=review.author.username %> </b></div>
                 <p class="card-text"><%= review.comment %> </p>
                 <p class="card-text"><%= review.rating %>stars</p>
             </div>
