--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -32,7 +32,7 @@
 
         <div class="mb-3">
         <lable for="image" class="form-label">Upload Listing Image</lable>
-        <input name="listing[image]"  type="file" id="image" class="form-control">
+        <input name="listing[image]"  type="file" id="image" class="form-control" required>
         </div>
 
         <div class="row">
