--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,7 +15,7 @@
             </div>
     <div class="">
         <div class="card col-6 offset-3 show-card listing-card" style="width: 30rem;">
-         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
+         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
         <p class="card-text">Ownde by <i><%= listing.owner.username %></i></p>
         <p class="card-text"><%= listing.description %></p>
