--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,12 +1,12 @@
-    <% layout("layouts/boilerplate") %>
-<!DOCTYPE html>
+    <% layout('layouts/boilerplate') %>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WanderLust</title>
 </head>
-<body>
+<body> -->
 
     <div class="row mt-3">
         <div class="col-8 offset-2">
@@ -59,5 +59,5 @@
         <br><br>
     </form>
     </div>
-</body>
-</html>
+<!-- </body>
+</html> -->
