--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,8 +38,8 @@
 
  
     <div class="col-8 offset-3 mb-3">
-        <hr>
         <% if(currUser){ %>
+        </hr>
         <h4>Leave a Review</h4>
         <form  method="POST" action="/listings/<%= listing._id %>/reviews" novalidate class="needs-validation">
             <!-- <div class="mb-3 mt-3">
@@ -71,9 +71,11 @@
         </form>
         <% } %>
       
-
+        <% if(listing.reviews.length>0){ %>
+            <h4>No Reviews Yet</h4>
         <p><b>All Reviews</b></p>
         <div class="row ">
+        <p><b>All Reviews</b></p>
         <% for(review of listing.reviews){ %>
         <div class="card col-5 mb-3 ms-3">
             <div class="card-body">
@@ -88,7 +90,25 @@
         </div>
         <% } %>
         </div>
+        <% } %>
       </div>
+      <!-- <div class="col-8 offset-3 mb-3">
+            <h3>Where you'll be</h3>
+            <div id="map"></div>
+        </div> -->
     </div>
+        <!-- <script>
+            let mapToken= "<%= process.env.MAP_TOKEN %>";
+            console.log(mapToken);
+            mapboxgl.accessToken = mapToken;
+
+            const map=new mapboxgl.Map({
+                container:'map',
+                style: 'mapbox://styles/mapbox/streets-v12',
+                center:[-74.5, 40],
+                zoom :9
+            })
+        </script> -->
+
 <!-- </body>
 </html> -->
