--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="f-info">
-        <div class="f-info-socials">
+        <div class="f-info-socials sticky-bottom w-100 ">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
